update config lint-staged

--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "build": "NODE_ENV=production webpack",
     "lint": "eslint src/*.js src/*.jsx"
   },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint . --fix",
+      "git add ."
+    ],
+    "*.scss": [
+      "stylelint --syntax scss --fix",
+      "git add ."
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx}": [
-      "eslint . --fix",
-      "git add"
-    ],
-    "src/**/*.scss": [
-      "stylelint --syntax scss --fix",
-      "git add"
-    ]
   },
   "keywords": [],
   "author": "",
