--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-webpack-plugin": "^2.5.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
-    "husky": "^6.0.0",
+    "husky": "4",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.4.0",
     "postcss": "^8.2.9",
