--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve",
+    "start": "webpack serve --open",
     "build": "NODE_ENV=production webpack",
     "lint": "eslint src/*.js src/*.jsx"
   },
