--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,21 @@
     "prettier/prettier": ["error", {"endOfLine": "auto"}],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/jsx-uses-react": "error",
-     "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "react/jsx-props-no-spreading": 0,
+    "import/no-unresolved": [
+      "error",
+      {
+        "ignore": ["@"]
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"],
+        "paths": ["src"]
+      }
+    }
   }
 }
