--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,18 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-    "at-rule-no-unknown": true,
+    "at-rule-no-unknown":[true, {
+      "ignoreAtRules": [
+        "mixin",
+        "include",
+        "function",
+        "return",
+        "if",
+        "extend",
+        "at-root",
+        "for"
+      ]
+    }],
     "block-no-empty": true,
     "color-no-invalid-hex": true,
     "comment-no-empty": true,
