--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
+    "stylelint-config-prettier": "^8.0.2"
   }
 }
