--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
     "build": "NODE_ENV=production webpack",
-    "lint": "eslint src/*.js src/*.jsx"
+    "lint": "eslint --fix src/*.js src/*.jsx && stylelint --fix src/*.scss"
   },
   "lint-staged": {
     "*.{js,jsx}": [
