--- a/package.json
+++ b/package.json
@@ -68,12 +68,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
-    "stylelint-config-prettier": "^8.0.2"
+    "react-router-dom": "^5.2.0"
   }
 }
