--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/jsx-props-no-spreading": 0,
+    "react/prop-types": [2, { "ignore": ["children"] }],
     "import/no-unresolved": [
       "error",
       {
