add redux, redux thunk@

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "react/jsx-uses-vars": "error",
     "react/jsx-props-no-spreading": 0,
     "react/prop-types": [2, { "ignore": ["children"] }],
+    "react-hooks/exhaustive-deps": "warn",
     "import/prefer-default-export": "off",
     "import/no-unresolved": [
       "error",
