--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   "plugins": ["react", "react-hooks", "jsx-a11y", "import", "prettier"],
   "rules": {
     "prettier/prettier": ["error", {"endOfLine": "auto"}],
+    "no-param-reassign": ["error", { "props": false }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
