--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,17 @@
       {
         "ignore": ["@", "."]
       }
-    ]
+    ],
+    "jsx-a11y/label-has-associated-control": ["error", {
+      "required": {
+        "some": ["nesting", "id"]
+      }
+    }],
+    "jsx-a11y/label-has-for": ["error", {
+      "required": {
+        "some": ["nesting", "id"]
+      }
+    }]
   },
   "settings": {
     "import/resolver": {
